Funny Bhahana Interaction Buttons part 2

--- a/localisation/TD_01_flavour_desjaniti_l_english.yml
+++ b/localisation/TD_01_flavour_desjaniti_l_english.yml
@@ -196,3 +196,30 @@
  desjaniti.306.t: "New Teachings Released"
  desjaniti.306.desc: "REPLACE_ME"
  desjaniti.306.a: "Glory to the Pakapujarirajya"
+ 
+ 
+ pakapujarirajya_designate_sinner_title: "Designate Sinner"
+ pakapujarirajya_designate_sinner_tooltip: "We will designate the ruler of said country a grave sinner"
+ pakapujarirajya_designate_sinner_desc: "We will designate the ruler of target country a grave sinner, which will greatly reduce our relations with them, give them a plethora of maluses, and gives every desjaniti country a free Casus Beli on them.\n§RThis action will cost us 25 devotion.§!"
+ TD_Desjaniti_designated_a_grave_sinner: "Designated a grave Sinner"
+ desjaniti_designated_us_a_grave_sinner: "Designated us a grave Sinner"
+ desjaniti.307.t: "Pakapujarirajya designated our ruler a sinner."
+ desjaniti.307.desc: "REPLACE_ME"
+ desjaniti.307.a: "Damnation!"
+ cb_grave_sinner: "Holy War"
+ cb_grave_sinner_desc: "A Holy War against a grave sinner of Desjaniti faith, it is our duty to decimate this internal threat to integrity of our faith!"
+ pakapujarirajya_designate_crusade_title: "Call Holy War Against"
+ pakapujarirajya_designate_crusade_tooltip: "We will call a holy war against them"
+ pakapujarirajya_designate_crusade_desc: "We will declare holy war against target country, which will greatly reduce our relations with them, and give every desjaniti country a free Casus Beli on them.\n§RThis action will cost us 25 devotion.§!"
+ TD_Desjaniti_designated_a_desjaniti_holy_war_target: "Designated a Holy War target by Pakapujarirajya"
+ desjaniti_designated_us_a_external_threat: "Designated us an External Threat"
+ desjaniti.307.t: "Pakapujarirajya declared a holy war against us!"
+ desjaniti.307.desc: "REPLACE_ME"
+ desjaniti.307.a: "Damnation!"
+ cb_holy_war_desjaniti: "Holy War"
+ cb_holy_war_desjaniti_desc: "A Holy War against external threat of Desjaniti Faith designated by Sarvoccapakapujari of Pakapujarirajya, it is our duty to decimate this external threat!"
+ pakapujarirajya_send_envoy_title: "Send Holy Envoy"
+ pakapujarirajya_send_envoy_tooltip: "We will send a Holy Envoy to them"
+ pakapujarirajya_send_envoy_desc: "We will send a Holy Envoy to target country, which will greatly improve our relations with them and give them diplomatic reputation increase.\n§RThis action will cost us 10 devotion.§!"
+ TD_Desjaniti_host_of_holy_envoy: "Host of Holy Envoy"
+ desjaniti_sent_us_a_holy_envoy: "Sent us a Holy Envoy"
