Desjaniti Fervour mechanic and tweaks

--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -16,6 +16,18 @@
  estate_maratha_development_of_castles_rt: "The modifier '§YExpand the Fortifications§!' is removed from all provinces with a §YFort§!.\nThe modifier '§YExpand the Ramparts§!' is removed from all provinces with §YRamparts§!."
  estate_maratha_development_of_castles_mod: "Expand the Fortifications"
  
+ ability_pakapujarirajya_mechanic: "Pakapujarirajya Mechanics"
+ desjaniti_fervour_power: "Desjaniti Fervour"
+ desjaniti_fervour_power_desc: "Defines level of faithful's fervour in our nation\n§YIncreased by:§!\n -Having high Prestige\n -Having high ruler Administrative Skill\n -Having high ruler Diplomatic Skill\n -Having high Religious Unity"
+ monthly_desjaniti_fervour_power: "Monthly Desjaniti Fervour"
+ pakapujarirajya_call_manpower: "Call on the Faithful"
+ pakapujarirajya_call_manpower_desc: "We will call the faithful to join our armies to help us fight our holy wars!"
+ pakapujarirajya_release_new_minor_teaching: "Release new local Teaching"
+ pakapujarirajya_release_new_minor_teaching_desc: "We will release a new local teaching to help Pakapujarirajya's Pakapujari organize better."
+ pakapujarirajya_fund_desjaniti_studies: "Fund Desjaniti Studies"
+ pakapujarirajya_fund_desjaniti_studies_desc: "We will increase our efforts and donate money to help young desjaniti folks get their access to studying."
+ TD_Pakapujarirajya_Desjaniti_Fervour: "Desjaniti Faithful's Fervour"
+ 
  estate_church_peace_perfectionism: "Pacifist Perfectionism"
  estate_church_peace_perfectionism_desc: "Ayuhuro focuses on peace and tranquility as it's core religious and moral values, but peaceful doesn't mean defenseless, as we can stand our ground if someone decides to invade us."
  
