Loc and clean up

--- a/localisation/TD_01_flavour_desjaniti_l_english.yml
+++ b/localisation/TD_01_flavour_desjaniti_l_english.yml
@@ -147,12 +147,12 @@
  desjaniti.202.c: "Support neither side"
  
  pakapujarirajya_proclaim_years_of_festivals_tt: "Proclaim Years of Festivals"
- pakapujarirajya_ban_burghers_tt: "Endorse Anti-Burghers Movements"
- pakapujarirajya_proclaim_saint_year_tt: "Proclaim Saint Year"
+ pakapujarirajya_ban_burghers_tt: "Endorse Agrarianism"
+ pakapujarirajya_proclaim_saint_year_tt: "Holy Introspection"
  pakapujarirajya_outlaw_forgein_teachings_tt: "Outlaw Forgein Teachings"
- pakapujarirajya_demand_additional_tax_tt: "Demand Additional Tax for Education"
- pakapujarirajya_release_new_teachings_tt: "Release new Teachings"
- TD_pakapujarirajya_doesnt_have_cooldown_tt: "Does not have a 10 year cooldown for using Pakapujarirajya's Abilities."
+ pakapujarirajya_demand_additional_tax_tt: "Enforce Sacral Education"
+ pakapujarirajya_release_new_teachings_tt: "Chronicle new Teachings"
+ TD_pakapujarirajya_doesnt_have_cooldown_tt: "Does NOT have a cooldown for Pakapujarirajya's abilities."
  TD_pakapujarirajya_cooldown_mod: "Pakapujarirajya Ability Cooldown"
  TD_Desjaniti_cant_build_mod: "Year of Repose"
  TD_Desjaniti_years_of_festivals: "Years of Festivals"
@@ -160,47 +160,47 @@
  desjaniti.300.desc: "REPLACE_ME"
  desjaniti.300.a: "Well, we can't oppose the Pakapujarirajya"
  desjaniti_proclaimed_years_of_festivals: "Proclaimed Years of Festivals"
- BHA_proclaim_years_of_festivals_effect_tt: "§YEvery Desjaniti country will lose 10 relations with us and get following modifiers:\n§!"
- TD_anti_burghers_movements: "Anti Burghers Movements"
- desjaniti_endorsed_anti_burghers_movements: "Endorsed anti-Burghers Movements"
- BHA_ban_burgers_effect_tt: "§YEvery Desjaniti country will lose 25 relations with us and get following modifiers and effects:\n§!"
- desjaniti.301.t: "Endorsement of Anti-Burghers Movements"
+ BHA_proclaim_years_of_festivals_effect_tt: "Every §YDesjaniti§! country will lose §R10§! opinion of us and gain following modifiers:\n"
+ TD_anti_burghers_movements: "Agrarianism"
+ desjaniti_endorsed_anti_burghers_movements: "Endorsed Agrarianism"
+ BHA_ban_burgers_effect_tt: "Every §YDesjaniti§! country will lose §R25§! opinion of us and gain following modifiers and effects:\n"
+ desjaniti.301.t: "Endorsement of Agrarianism"
  desjaniti.301.desc: "REPLACE_ME"
  desjaniti.301.a: "Well, we can't oppose the Pakapujarirajya"
- BHA_proclaim_saint_year_effect_tt: "§YEvery Desjaniti country will lose 25 relations with us and get following modifiers and effects:\n§!"
- desjaniti_proclaimed_saint_year: "Proclaimed Saint Year"
- desjaniti.302.t: "Saint Year Proclaimed"
+ BHA_proclaim_saint_year_effect_tt: "Every §YDesjaniti§! country will lose §R25§! opinion of us and gain following modifiers and effects:\n"
+ desjaniti_proclaimed_saint_year: "Holy Introspection"
+ desjaniti.302.t: "Edict of Holy Introspection"
  desjaniti.302.desc: "REPLACE_ME"
  desjaniti.302.a: "Well, we can't oppose the Pakapujarirajya"
  desjaniti.303.t: "Unjust war with Pakapujarirajya"
  desjaniti.303.desc: "REPLACE_ME"
  desjaniti.303.a: "There shall be peace"
  desjaniti.303.b: "But it is our destiny to conquer Bhahana!"
- TD_saint_year: "Saint Year"
- BHA_whitepeace_aggressors_tt: "§REvery Desjaniti country that has offensive war with us will be forced to whitepeace us or suffer dire consequences.§!"
+ TD_saint_year: "Year of Introspection"
+ BHA_whitepeace_aggressors_tt: "§REvery §YDesjaniti§! country that has an offensive war against us will be forced to white peace us or suffer dire consequences.§!"
  desjaniti_outlawed_forgein_teachings: "Outlawed Forgein Teachings"
  TD_forgein_teachings_outlawed: "Forgein Teachings Outlawed"
  desjaniti.304.t: "Forgein Teachings Outlawed"
  desjaniti.304.desc: "REPLACE_ME"
  desjaniti.304.a: "Well, we can't oppose the Pakapujarirajya"
- BHA_outlaw_forgein_teachings_effect_tt: "§YEvery Desjaniti country will lose 25 relations with us and get following modifiers:\n§!"
- TD_desjaniti_additional_education_funding: "Additional Education Funding"
- desjaniti_demanded_additional_tax_for_education: "Demanded Additional Tax for Education"
- desjaniti.305.t: "Additional tax for Education Demanded"
+ BHA_outlaw_forgein_teachings_effect_tt: "Every §YDesjaniti§! country will lose §R25§! opinion of us and get following modifiers:\n"
+ TD_desjaniti_additional_education_funding: "Sacral Education"
+ desjaniti_demanded_additional_tax_for_education: "Enforce Sacral Education"
+ desjaniti.305.t: "Enforced Sacral Education"
  desjaniti.305.desc: "REPLACE_ME"
  desjaniti.305.a: "Well, we can't oppose the Pakapujarirajya"
- BHA_demand_additional_tax_effect_tt: "§YEvery Desjaniti country will lose 25 relations with us and get following modifiers and effects:\n§!"
- desjaniti_released_new_teachings: "Released new Teachings"
- TD_desjaniti_released_new_teachings: "Released new Teachings"
- BHA_release_new_teachings_effect_tt: "§YEvery Desjaniti country will gain 25 relations with us and we will get following modifiers:\n§!"
- desjaniti.306.t: "New Teachings Released"
+ BHA_demand_additional_tax_effect_tt: "Every §YDesjaniti§! country will lose §R25§! opinion of us and gain the following modifiers and effects:\n"
+ desjaniti_released_new_teachings: "Chronicled new Teachings"
+ TD_desjaniti_released_new_teachings: "Chronicled new Teachings"
+ BHA_release_new_teachings_effect_tt: "Every §YDesjaniti§! country will gain §G25§! opinion of us and we will gain the following modifiers:\n"
+ desjaniti.306.t: "New Teachings Chronicled"
  desjaniti.306.desc: "REPLACE_ME"
  desjaniti.306.a: "Glory to the Pakapujarirajya"
  
  
- pakapujarirajya_designate_sinner_title: "Designate Sinner"
- pakapujarirajya_designate_sinner_tooltip: "We will designate the ruler of said country a grave sinner"
- pakapujarirajya_designate_sinner_desc: "We will designate the ruler of target country a grave sinner, which will greatly reduce our relations with them, give them a plethora of maluses, and gives every desjaniti country a free Casus Beli on them.\n§RThis action will cost us 25 devotion.§!"
+ pakapujarirajya_designate_sinner_title: "Ostracize Ruler"
+ pakapujarirajya_designate_sinner_tooltip: "Designate the ruler of this country as a grave sinner, hurting their stability and diplomacy."
+ pakapujarirajya_designate_sinner_desc: "At the cost of §R10§! devotion, we will designate the ruler of target country a grave sinner, which will result in mutual §R100§! opinion loss.\nAdditionaly, they will gain the suffer the following penalties until the death of their current ruler:\nNational Tax Modifier: §R-10.0%§!\nStability Cost Modifier: §R-15.0%§!\nYearly Prestige: §R-2.00§!\nTolerance of the True Faith: §R-2.00§!\nYearly Legitimacy/Devotion/Horde Unity: §R-0.50§!\nYearly Republican Tradition: §R-0.30§!\nOpinion of Country from others of the same Religion: §R-100§!"
  TD_Desjaniti_designated_a_grave_sinner: "Designated a grave Sinner"
  desjaniti_designated_us_a_grave_sinner: "Designated us a grave Sinner"
  desjaniti.307.t: "Pakapujarirajya designated our ruler a sinner."
@@ -213,19 +213,21 @@
  pakapujarirajya_designate_crusade_desc: "We will declare holy war against target country, which will greatly reduce our relations with them, and give every desjaniti country a free Casus Beli on them.\n§RThis action will cost us 25 devotion.§!"
  TD_Desjaniti_designated_a_desjaniti_holy_war_target: "Designated a Holy War target by Pakapujarirajya"
  desjaniti_designated_us_a_external_threat: "Designated us an External Threat"
- desjaniti.307.t: "Pakapujarirajya declared a holy war against us!"
- desjaniti.307.desc: "REPLACE_ME"
- desjaniti.307.a: "Damnation!"
+ desjaniti.308.t: "Pakapujarirajya declared a holy war against us!"
+ desjaniti.308.desc: "REPLACE_ME"
+ desjaniti.308.a: "Damnation!"
  cb_holy_war_desjaniti: "Holy War"
  cb_holy_war_desjaniti_desc: "A Holy War against external threat of Desjaniti Faith designated by Sarvoccapakapujari of Pakapujarirajya, it is our duty to decimate this external threat!"
- pakapujarirajya_send_envoy_title: "Send Holy Envoy"
- pakapujarirajya_send_envoy_tooltip: "We will send a Holy Envoy to them"
- pakapujarirajya_send_envoy_desc: "We will send a Holy Envoy to target country, which will greatly improve our relations with them and give them diplomatic reputation increase.\n§RThis action will cost us 10 devotion.§!"
- TD_Desjaniti_host_of_holy_envoy: "Host of Holy Envoy"
- desjaniti_sent_us_a_holy_envoy: "Sent us a Holy Envoy"
+ pakapujarirajya_send_envoy_title: "Scholastic Envoy"
+ pakapujarirajya_send_envoy_tooltip: "Send a special envoy which will grant them following modifiers."
+ pakapujarirajya_send_envoy_desc: "We will send a Holy Envoy to target country, which will greatly improve our relations with them and grant them §G+2.00§! diplomatic reputation.\nThis action will cost us §R10§! devotion."
+ TD_Desjaniti_host_of_holy_envoy: "Hosting a Devan Envoy"
+ desjaniti_sent_us_a_holy_envoy: "Sent us a Devan Envoy"
  
  desjaniti_pay_out_sins_title: "Donate Money to Pakapujarirajya"
  desjaniti_pay_out_sins_desc: "By paying donation to Pakapujarirajya perhaps we could pay out our way from being designated a grave sinner."
  Desjaniti_grant_sinner_protection_tt: "We will be granted a 10 year long protection from being designated a grave sinner again."
  TD_Desjaniti_grave_sinner_protection: "Grave Sinner Prot IV" #Haha minecraft reference
  TD_pakapujarirajya_doesnt_have_protection_tt: "Doesn't have pay out his way of grave sinner status in last 10 years."
+
+ DIPLOMACYACTION_CATEGORY_warning: "Deva actions" #i am not going to explain what the fuck is happening
