--- a/localisation/TD_01_flavour_desjaniti_l_english.yml
+++ b/localisation/TD_01_flavour_desjaniti_l_english.yml
@@ -208,9 +208,9 @@
  desjaniti.307.a: "Damnation!"
  cb_grave_sinner: "Holy War"
  cb_grave_sinner_desc: "A Holy War against a grave sinner of Desjaniti faith, it is our duty to decimate this internal threat to integrity of our faith!"
- pakapujarirajya_designate_crusade_title: "Call Holy War Against"
- pakapujarirajya_designate_crusade_tooltip: "We will call a holy war against them"
- pakapujarirajya_designate_crusade_desc: "We will declare holy war against target country, which will greatly reduce our relations with them, and give every desjaniti country a free Casus Beli on them.\n§RThis action will cost us 25 devotion.§!"
+ pakapujarirajya_designate_crusade_title: "Declare the Enemy of God"
+ pakapujarirajya_designate_crusade_tooltip: "We will call a great holy war against them"
+ pakapujarirajya_designate_crusade_desc: "We will declare holy war against target country, which will greatly reduce their opinion of us, and give every Desjaniti country a free Casus Belli on them.\nThis action will cost us §R25§! devotion."
  TD_Desjaniti_designated_a_desjaniti_holy_war_target: "Designated a Holy War target by Pakapujarirajya"
  desjaniti_designated_us_a_external_threat: "Designated us an External Threat"
  desjaniti.308.t: "Pakapujarirajya declared a holy war against us!"
