--- a/localisation/TD_01_flavour_desjaniti_l_english.yml
+++ b/localisation/TD_01_flavour_desjaniti_l_english.yml
@@ -224,9 +224,9 @@
  TD_Desjaniti_host_of_holy_envoy: "Hosting a Devan Envoy"
  desjaniti_sent_us_a_holy_envoy: "Sent us a Devan Envoy"
  
- desjaniti_pay_out_sins_title: "Donate Money to Pakapujarirajya"
- desjaniti_pay_out_sins_desc: "By paying donation to Pakapujarirajya perhaps we could pay out our way from being designated a grave sinner."
- Desjaniti_grant_sinner_protection_tt: "We will be granted a 10 year long protection from being designated a grave sinner again."
+ desjaniti_pay_out_sins_title: "Pentinence through Pauperization"
+ desjaniti_pay_out_sins_desc: "By sending our gold to Pakapujarirajya perhaps we could pay out our way from being designated a grave sinner."
+ Desjaniti_grant_sinner_protection_tt: "We will be granted a 10 year long protection from being ostracized from the Desjaniti community."
  TD_Desjaniti_grave_sinner_protection: "Grave Sinner Prot IV" #Haha minecraft reference
  TD_pakapujarirajya_doesnt_have_protection_tt: "Doesn't have pay out his way of grave sinner status in last 10 years."
 
