Marudesa gov mechanics

--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -16,6 +16,11 @@
  estate_maratha_development_of_castles_rt: "The modifier '§YExpand the Fortifications§!' is removed from all provinces with a §YFort§!.\nThe modifier '§YExpand the Ramparts§!' is removed from all provinces with §YRamparts§!."
  estate_maratha_development_of_castles_mod: "Expand the Fortifications"
  
+ imperial_legion_war_supply_mechanic: "Imperial Legion's War Supply Mechanic"
+ war_supply_power: "War Supply"
+ war_supply_power_desc: "Defines how much of War Supply is left in the legion's storage\n§YIncreased by:§!\n -Iron-producing Provinces\n§YDecreased by:§!\n -Automatically by itself every month.\n"
+ monthly_war_supply_power: "Monthly War Supply"
+ 
  ability_pakapujarirajya_mechanic: "Pakapujarirajya Mechanics"
  desjaniti_fervour_power: "Desjaniti Fervour"
  desjaniti_fervour_power_desc: "Defines level of faithful's fervour in our nation\n§YIncreased by:§!\n -Having high Prestige\n -Having high ruler Administrative Skill\n -Having high ruler Diplomatic Skill\n -Having high Religious Unity"
