--- a/localisation/TD_01_flavour_desjaniti_l_english.yml
+++ b/localisation/TD_01_flavour_desjaniti_l_english.yml
@@ -97,8 +97,9 @@
  BHA_Appoint_next_deva_tt: "§YNext Deva is appointed.§!"
  BHA_Chilverchian_influences_tt: "§RAs long as this Deva is active, our provinces have chance to become revolutionary (When Revolutions Rework happens, that is, remove this line when it happens pls).§!\n"
  
- BHA_living_god: "Living God"
+ BHA_living_god: "God Incarnate"
  BHA_living_god_desc: "Ruler with this personality is seen by his fellow faith followers as a living god."
+ BHA_living_god_die_desc: "[Root.Monarch.GetHerHisCap] soul has finally returned to its proper place."
  
  desjaniti_home_of_deva: "Home of Deva"
  desjaniti_home_of_deva_desc: "This province is a place where person who ascended to Desjaniti Godhood was born, and is considered sacred by Desjaniti faith."
