--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -20,18 +20,21 @@
  war_supply_power: "War Supply"
  war_supply_power_desc: "Defines how much of War Supply is left in the legion's storage\n§YIncreased by:§!\n -Iron-producing Provinces\n§YDecreased by:§!\n -Automatically by itself every month.\n"
  monthly_war_supply_power: "Monthly War Supply"
+ war_supply_power_gain_modifier: "War Supply Gain Modifier"
+ 
  
  ability_pakapujarirajya_mechanic: "Pakapujarirajya Mechanics"
- desjaniti_fervour_power: "Desjaniti Fervour"
+ desjaniti_fervour_power: "Desjaniti Fervor"
  desjaniti_fervour_power_desc: "Defines level of faithful's fervour in our nation\n§YIncreased by:§!\n -Having high Prestige\n -Having high ruler Administrative Skill\n -Having high ruler Diplomatic Skill\n -Having high Religious Unity"
- monthly_desjaniti_fervour_power: "Monthly Desjaniti Fervour"
+ monthly_desjaniti_fervour_power: "Monthly Desjaniti Fervor"
+ desjaniti_fervour_power_gain_modifier: "Desjaniti Fervor Gain Modifier"
  pakapujarirajya_call_manpower: "Call on the Faithful"
  pakapujarirajya_call_manpower_desc: "We will call the faithful to join our armies to help us fight our holy wars!"
- pakapujarirajya_release_new_minor_teaching: "Release new local Teaching"
- pakapujarirajya_release_new_minor_teaching_desc: "We will release a new local teaching to help Pakapujarirajya's Pakapujari organize better."
- pakapujarirajya_fund_desjaniti_studies: "Fund Desjaniti Studies"
- pakapujarirajya_fund_desjaniti_studies_desc: "We will increase our efforts and donate money to help young desjaniti folks get their access to studying."
- TD_Pakapujarirajya_Desjaniti_Fervour: "Desjaniti Faithful's Fervour"
+ pakapujarirajya_release_new_minor_teaching: "Scroll Canonization"
+ pakapujarirajya_release_new_minor_teaching_desc: "We will introduce a new text in the Desjaniti canon."
+ pakapujarirajya_fund_desjaniti_studies: "Education for the People"
+ pakapujarirajya_fund_desjaniti_studies_desc: "We will increase our efforts and donate money in order to help the people learn the new teachings."
+ TD_Pakapujarirajya_desjaniti_fervour: "Faithfuls' Fervor"
  
  estate_church_peace_perfectionism: "Pacifist Perfectionism"
  estate_church_peace_perfectionism_desc: "Ayuhuro focuses on peace and tranquility as it's core religious and moral values, but peaceful doesn't mean defenseless, as we can stand our ground if someone decides to invade us."
@@ -222,7 +225,7 @@
  saryana_advanced_feudalism: "Advanced Feudalism"
  saryana_advanced_feudalism_desc: "Saryanian land have been known for centuries as fragmented due to early adoption of feudalism in Apagtaru lands, and saw unification only in modern history with the eclipse of feudalism and dawn of more modern legislation, and it's roots can still be seen with the amount of subjects Saryana tended to have until XVIIth century."
  saryana_katakabharti: "Katakabharti"
- saryana_katakabharti_desc: "Katakabharti is a unique to Saryana recruitment system adopted in year 1396, where every peasant villager that was of age, that means, between 15 and 40 years old, had to fulfill atleast ten years of mandatory military service in Saryanian Royal Army."
+ saryana_katakabharti_desc: "Katakabharti is a unique to Saryana recruitment system adopted in year 1396, where every peasant villager that was of age, that means, between 15 and 40 years old, had to fulfill at least ten years of mandatory military service in Saryanian Royal Army."
  saryana_agrasara_gun_designs: "Agrasara Gun Designs"
  saryana_agrasara_gun_designs_desc: "Southward conquest of Saryana and it's subject increased the pace at which technological breakthroughts were made in military science, resulting in the creation and adoption of Standard Agrasara Gun Designs in the Saryanian Royal Army, which were more accurate and had higher fire rate than it's precedessors."
  saryana_southern_ambitions: "Southern Ambitions"
@@ -244,7 +247,7 @@
  bhahana_pakapujari_academies: "Pakapujari Academies"
  bhahana_pakapujari_academies_desc: "Pakapujari are the religious caste overseeing the implementation of Deva's will in legislation and lawmaking, and are tasked with promoting wisdom and science so more people can ascend and we could get a new Deva, so in that spirit, Pakapujari are started opening Free, Compulsory Academies for the masses."
  bhahana_bharati_system: "Bharati System"
- bhahana_bharati_system_desc: "Bharati System is a religious in nature conscription system of Bhahana, which is complusory for every male desjaniti faithful that is of age between 14 and 35, and is demanded to serve atleast 8 years in the Deva's armies."
+ bhahana_bharati_system_desc: "Bharati System is a religious in nature conscription system of Bhahana, which is complusory for every male desjaniti faithful that is of age between 14 and 35, and is demanded to serve at least 8 years in the Deva's armies."
  bhahana_religious_administration: "Religious Administration"
  bhahana_religious_administration_desc: "Unlike most other countries, where nobility is tasked with overseeing the administration of bigger administrative units, in Bhahana, it is a job of Pakapujari, the local clergy caste, and they are tasked with this since the Harshad Rajana reformed the administration of Pakapujarirajya in 1379."
  bhahana_devatarastra: "Devatarastra"
