--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -25,7 +25,7 @@
  
  ability_pakapujarirajya_mechanic: "Pakapujarirajya Mechanics"
  desjaniti_fervour_power: "Desjaniti Fervor"
- desjaniti_fervour_power_desc: "Defines level of faithful's fervour in our nation\n§YIncreased by:§!\n -Having high Prestige\n -Having high ruler Administrative Skill\n -Having high ruler Diplomatic Skill\n -Having high Religious Unity"
+ desjaniti_fervour_power_desc: "Defines level of faithful's fervour in our nation\n§YIncreased by:§!\n -Having high Prestige\n -Converting Provinces\n -Having high ruler Administrative and Diplomatic Skill\n -Having high Religious Unity"
  monthly_desjaniti_fervour_power: "Monthly Desjaniti Fervor"
  desjaniti_fervour_power_gain_modifier: "Desjaniti Fervor Gain Modifier"
  pakapujarirajya_call_manpower: "Call on the Faithful"
