--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -67,7 +67,7 @@
  keltmark_area: "Keltmark"
  granlatz_area: "Granlatz"
  utameer_area: "Utameer"
- douardour_area: "Douardour"
+ walgrenz_area: "Walgrenz"
  snaiwatz_area: "Snaiwatz"
  kupfberg_area: "Kupfberg"
  lachsmund_area: "Lachsmund"
