--- a/localisation/TD_government_l_english.yml
+++ b/localisation/TD_government_l_english.yml
@@ -25,6 +25,9 @@
 
  acerbic_march_reform: "Marcha Acerba"
  acerbic_march_reform_desc: "Acerbic marches were created after king Enrique II granted the newly conquered land to his most loyal (and zealous) subjects."
+ MARCA: "Marca"
+ MARCAS: "Marcas"
+ MARQUESA: "Marquesa"
  mechanic_culture_convert_yermic_on_religious_conversion_yes: "Culture converts yermic provinces to your culture when converted by a missionary."
  independent_acerbic_march_reform: "Independent March"
  independent_acerbic_march_reform_desc: "Acerbic marches were created after king Enrique II granted the newly conquered land to his most loyal (and zealous) subjects, but now they stand by themselves in the world with no senior ruler."
