South Pemenia dev buffs and ideas

--- a/localisation/TD_01_Flavour_Heisean_l_english.yml
+++ b/localisation/TD_01_Flavour_Heisean_l_english.yml
@@ -126,3 +126,21 @@
  heisean.200.t: "End of the Civil War"
  heisean.200.desc: "REPLACE_ME"
  heisean.200.a: "We will rebuild."
+
+ nitai_group_ideas: "Nitai Minor Ideas"
+ nitai_group_ideas_bonus: "Nitai Minor Ambition"
+ nitai_group_ideas_start: "Nitai Minor Traditions"
+ nitai_group_antlered_cavalry: "Antlered Cavalry"
+ nitai_group_antlered_cavalry_desc: "Our horsemen often wear helmets with attached antlers of dead deers, often used as tactic to scare enemies and their horses, however the roots of this traditions probably come from the veneratio of the white deer."
+ nitai_group_heisen_calendar: "Heisen Calendar"
+ nitai_group_heisen_calendar_desc: "During the time when the Heisen empire greatly influenced our tribal politics, many embraced their lunar calendar. This helped us better manage times of harvest and cycles of wild game, greatly improving our economy."
+ nitai_group_heisen_mercenaries: "Heisen Mercenaries"
+ nitai_group_heisen_mercenaries_desc: "Our people often dabble in mercenary work for the heisen states. Now with their civil war, there is a lot of demand for experienced fighters."
+ nitai_group_nightly_hunters: "Nightly Hunters"
+ nitai_group_nightly_hunters_desc: "It is known at the enemy is most suspectible for attack during the night. Under the divine light of the moon, we can effectively strike our enemies and then quickly retreat unnoticed."
+ nitai_group_reteryuk: "Reteryuk"
+ nitai_group_reteryuk_desc: "The white deer of Bavgania, incarnation of the moon, is said to be the most powerful protector of the forest and the guide of people to the afterlife. Many legends revolve around people meeting Reteryuk and those that attempt to kill him are often met with ironic punishment."
+ nitai_group_yar_trading: "Yar Trading"
+ nitai_group_yar_trading_desc: "The wild river of Yar, known by the Heiseans as Eoduunso, is the most common route used by foreign merchants to reach our lands, where they buy wild game, furs and high quality lumber for ship production."
+ nitai_group_henecan_myths: "Henecan Myths"
+ nitai_group_henecan_myths_desc: "The foreigners often pray to the weird gods and spirits, similar to those found in the Heisean, however often distinct depending on the language spoken. Interestingly, there seem to be many similarities to our own legends and many try to weave these new myths into our tradition."
