Avukhima Ideas nad ADJ change

--- a/localisation/TD_01_flavour_samadia_l_english.yml
+++ b/localisation/TD_01_flavour_samadia_l_english.yml
@@ -255,6 +255,24 @@
  bhahana_kharajosa: "Kharajosa"
  bhahana_kharajosa_desc: "Kharajosa is a type of mentality that every Desjaniti soldiers under service of Pakapujarirajya shows, and is full of loyalty to the cause and selfless sacrifice, ready to die for the faith and the Deva."
  
+ avukhima_ideas: "Avukhati Ideas"
+ avukhima_ideas_bonus: "Avukhati Ambition"
+ avukhima_ideas_start: "Avukhati Traditions"
+ avukhima_gates_of_khantadun: "Gates of Khantadun"
+ avukhima_gates_of_khantadun_desc: "Avukhima controls most of the passages between Kusadoitnian and Karunabal mountain ranges, making land trade domination of the entire region more easier via control over the eastern gates to Khantadun."
+ avukhima_lessons_of_narsehanism: "Lessons of Narsehanism"
+ avukhima_lessons_of_narsehanism_desc: "We are followers of Narsehanism in Eopedian world, and belive in coexsitence of religions and sharing cosmology and universal doctrines with other faiths. We shall encourage the conversion of Kausali, Uttarian and Samgharsahi belivers, but we shall not force them to join our faith."
+ avukhima_tteyl_nahal_tactics: "Ttyel Nahal Tactics"
+ avukhima_tteyl_nahal_tactics_desc: "Ttyel Nahal Tactics were invented in XVth century Avukhima, which focus on using concentrated firepower, massive barrages, and overall fire domination to overhelm the enemies, break their morale, and push them out of the battlefield, where scattered their are easier to pick off and defeat."
+ avukhima_rise_of_avukhima: "Rise of Avukhima"
+ avukhima_rise_of_avukhima_desc: "With decay of Paraderavi, it was unable to continue it's duty as guardian state of Khantadun, and so we proclaimed ourselves as new protectors of Khantadun, and decimated Paraderavi domination over the region."
+ avukhima_samadian_cultural_syncretism: "Cultural Syncretism"
+ avukhima_samadian_cultural_syncretism_desc: "Avukhati people instead of forcing conquered Samadian people to adopt Avukhati culture, adopted Samadian culture instead, which made Avukhima flourish it's poetry, law, theology and science."
+ avukhima_court_of_scholars: "Court of Scholars"
+ avukhima_court_of_scholars_desc: "In the Early years of protecting Khantadun, Avukhima started patronage of arts, science, and theology, inviting many notable scholars to their royal court and funding their research, essentialy starting the Avukhati Bahrak Nar Tarikh"
+ avukhima_bahrak_nar_tarikh: "Bahrak Nar Tarikh"
+ avukhima_bahrak_nar_tarikh_desc: "Bahrak Nar Tarikh, meaning Prosperous Times, was the long-lasting golden age of Avukhati people who lived in coexsitence with conquered Samadian people. Their exchanges many thoughts, leading to many breakthroughts in fields of science, both Samgharsahi and Eopedian theology, law, poetry, and architecture."
+ 
  apagtaru_kingdom_reform: "Apagtaru Kingdom"
  apagtaru_kingdom_reform_desc: "Apagtaru Kingdom is most prestigious governing body in Apagtaru lands, and it commands all of the Apagtaru people in the will of Gods. It is heavily anti-burghers due to it's long history."
  
