--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -859,7 +859,7 @@
  GAL_ADJ: "Galeqan"
  
  AVU: "Avukhima"
- AVU_ADJ: "Avukhiman"
+ AVU_ADJ: "Avukhati"
  PAV: "Paraderavi"
  PAV_ADJ: "Paraderavian"
  BOU: "Bonür"
