--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -896,6 +896,14 @@
  PES_ADJ: "Pesakhi"
  MAI: "Maisha"
  MAI_ADJ: "Maishan"
+ HSD: "Hadaseradesa"
+ HSD_ADJ: "Hadaseradesh"
+ DRR: "Dakharakhasaraja"
+ DRR_ADJ: "Dakharakhasaraji"
+ KUD: "Kausadesa"
+ KUD_ADJ: "Kausadesh"
+ GJD: "Gajadesa"
+ GJD_ADJ: "Gajadesh"
 
  KKA: "Kakatachia"
  KKA_ADJ: "Kakatachian"
