--- a/localisation/TD_01_flavour_jambaka_l_english.yml
+++ b/localisation/TD_01_flavour_jambaka_l_english.yml
@@ -37,3 +37,21 @@
  east_buluban_kasbaaku_desc: "Kasbaaku are histories and stories of the Buluban done through long songs. Families will often make their own Kasbaaku to teach their children fairy tales or family history. These Kasbaaku are often hummed or sung on caravans."
  east_buluban_braissli_trade: "Braissli Trade"
  east_buluban_braissli_trade_desc: "The tribes of the Braissli have garnered a strong friendship with the Eastern Buluban, often leading to marriages being frequent between the two. This relationship has continued even after the uniting of the Braissli under Šarikullu."
+
+ yamdan_group_ideas: "Yamdan Minor Ideas"
+ yamdan_group_ideas_bonus: "Yamdan Minor Ambition"
+ yamdan_group_ideas_start: "Yamdan Minor Traditions"
+ yamdan_group_land_of_ancestors: "Land of our Ancestors"
+ yamdan_group_land_of_ancestors_desc: "It is said that once a person dies, their soul becomes one with the earth, therefore it is crucial to protect the land for the sake of our ancestors and fighting on our own soil."
+ yamdan_group_horsemen_of_samboul: "Horsemen of Samboul"
+ yamdan_group_horsemen_of_samboul_desc: "While not necesarilly having to be from the region of Samboul, our horsemen gained much of their fame from the battle that took place near there, defeating Sanooman forces while being greatly outnumbered."
+ yamdan_group_dance_rites: "Dance Rites"
+ yamdan_group_dance_rites_desc: "In order to wake up the spirits occupying the ground to ask for their guidance, it is common for a community to conduct a series of dances. The sound and vibrations of the instruments and people allow for the soul to temporarily return to the human world."
+ yamdan_group_seasonal_migrations: "Seasonal Migrations"
+ yamdan_group_seasonal_migrations_desc: "Every Yamdan has two homes, which are often very distant from one other. Migration between those two places is done to let the spirits in the ground rest before we can use their services once again in the next season."
+ yamdan_group_divine_rulership: "Divine Rulership"
+ yamdan_group_divine_rulership_desc: "The power rule does not come from the willingness of the subjects or the competency of the ruler, but the divine right granted to us by our ancestors."
+ yamdan_group_hunters_masks: "Hunters' Masks"
+ yamdan_group_hunters_masks_desc: "It is customary to were a specially crafted masks during hunting, dueling and fighting wars. Traditionally, there are multiple types of masks used depending on the time of the fight, the animal hunted, whether spirits are pleased and age of the hunter."
+ yamdan_group_kingdom_of_yamda: "Kingdom of Yamda"
+ yamdan_group_kingdom_of_yamda_desc: "For far too long our people have lived under the threat of Sanooman influence. Once their power started to diminish, the great chief Kutu II rode with his army towards Kiitenbunj, destroying enemy army there and finally securing us as the new contenders for hegemon of Imamlayka."
