west sahila rulers

--- a/localisation/TD_01_flavour_desjaniti_l_english.yml
+++ b/localisation/TD_01_flavour_desjaniti_l_english.yml
@@ -93,7 +93,7 @@
  ascension_of_devatarastra: "Ascension of Devatarastra"
  devatas_last_will: "Devata's Last Will"
  
- BHA_Get_claims_on_desjaniti_provs_tt: "§YYou will get permanent claim on every Desjaniti province.§!\n"
+ BHA_Get_claims_on_desjaniti_provs_tt: "Gain permanent claim on §Yevery Desjaniti province.§!\n"
  BHA_Appoint_next_deva_tt: "§YNext Deva is appointed.§!"
  BHA_Chilverchian_influences_tt: "§RAs long as this Deva is active, our provinces have chance to become revolutionary (When Revolutions Rework happens, that is, remove this line when it happens pls).§!\n"
  
