--- a/localisation/TD_01_flavour_cakrawalunia_l_english.yml
+++ b/localisation/TD_01_flavour_cakrawalunia_l_english.yml
@@ -1,3 +1,22 @@
 ﻿l_english:
  cakrawalunian_bunuhrica_reform: "Cakrawalunian Bunuhrica"
  cakrawalunian_bunuhrica_reform_desc: "Core of the Empire"
+
+ ramumoni_group_ideas: "Ramumoni Ideas"
+ ramumoni_group_ideas_bonus: "Ramumoni Ambition"
+ ramumoni_group_ideas_start: "Ramumoni Traditions"
+
+ ramumoni_group_imperial_core: "Imperial Core"
+ ramumoni_group_imperial_core_desc: "We are known as the people from where the Cakrawalunian Empire started."
+ ramumoni_group_waves_of_blades: "Waves of Blades"
+ ramumoni_group_waves_of_blades_desc: "Due to living on many isles our troops needed to learn how to quickly adapt to any ideas of naval invasion. Construction of ships that can easily adapt to need to carry troops and forcing all soldiers to have essential knowledge allows us to move between the isles fast and with few casualities."
+ ramumoni_group_penu_ships: "Penu Ships"
+ ramumoni_group_penu_ships_desc: "Penu Ships also known as turtle ships are our core innovation that allowed us to move our people far with protection but also influences our further naval research."
+ ramumoni_group_center_of_the_east: "Center of the East"
+ ramumoni_group_center_of_the_east_desc: "Our ships directing all trade to our lands earned us title of center of the world."
+ ramumoni_group_cakrawalunian_feudalism: "Cakrawalunian Feudalism"
+ ramumoni_group_cakrawalunian_feudalism_desc: "In Cakrawalunia institution of feudalism was developed independently from all other powers."
+ ramumoni_group_local_logistics: "Local Logistics"
+ ramumoni_group_local_logistics_desc: "Our troops must be ready to be cut from all supplies and raid local lands to maintain their numbers."
+ ramumoni_group_cekedkusa: "Cekedkusa"
+ ramumoni_group_cekedkusa_desc: "Balance between work and life is important in our culture, due to this everybody is provided with free time but failure at given task are taken seriously."
